Fixed icon size on mobile/tablet

--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -44,3 +44,13 @@
         }
     }
 }
+
+@include phone-and-tablet {
+    #intro {
+        #intro-content {
+            .icon {
+                height: 10rem;
+            }
+        }
+    }
+}
